art_DATA = \
	epiphany-secure.png	\
	epiphany-unsecure.png	\
	epiphany-bookmark-page.png   \
	epiphany-entry.png \
	epiphany-download.png \
	epiphany-history.png	\
	epiphany-bookmarks.png \
	epiphany-tab-loading.gif \
	hand-open.png

appicon_DATA = epiphany-bookmarks.png
appicondir = $(datadir)/pixmaps

artdir = $(pkgdatadir)/art

EXTRA_DIST = $(appicon_DATA) $(art_DATA)
