art_DATA = \
	epiphany-close-tab.png \
	epiphany-entry.png \
	epiphany-download.png \
	epiphany-history.png	\
	epiphany-popup-hidden.png \
	epiphany-bookmarks.png

appicon_DATA = epiphany-bookmarks.png
appicondir = $(datadir)/pixmaps

artdir = $(pkgdatadir)/art

EXTRA_DIST = $(appicon_DATA) $(art_DATA)
