xmldir = $(pkgdatadir)
xml_DATA = \
	epiphany-bookmarksbar.xml	\
	epiphany-bookmark-editor-ui.xml	\
	epiphany-ui.xml			\
	epiphany-history-window-ui.xml

cssdir = $(pkgdatadir)
css_DATA = epiphany.css

gladedir = $(pkgdatadir)/glade
glade_DATA = \
	epiphany.ui			\
	epiphany-application-menu.ui	\
	prefs-dialog.ui

EXTRA_DIST = \
	$(xml_DATA) \
	$(css_DATA) \
	$(glade_DATA)
